--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -9,7 +9,7 @@
 * Memory stream based on marshaled memory</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.10</VersionPrefix>
+    <VersionPrefix>1.0.11</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.Core</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -30,7 +30,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EventedList&lt;T&gt;, GenericSafeHandle, HGlobalMemoryMethods, ListChangedEventArgs&lt;T&gt;, MarshalingStream, PinnedObject, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SparseArray&lt;T&gt;
+ComReleaser&lt;T&gt;, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EventedList&lt;T&gt;, GenericSafeHandle, HGlobalMemoryMethods, ListChangedEventArgs&lt;T&gt;, MarshalingStream, PinnedObject, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SparseArray&lt;T&gt;
 
 Structures
 EnumFlagIndexer&lt;T&gt;, StrPtrAnsi, StrPtrAuto, StrPtrUni
