--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -30,7 +30,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-ComReleaser&lt;T&gt;, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EventedList&lt;T&gt;, GenericSafeHandle, HGlobalMemoryMethods, ListChangedEventArgs&lt;T&gt;, MarshalingStream, PinnedObject, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SparseArray&lt;T&gt;
+ComReleaser&lt;T&gt;, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EnumExtensions, EventedList&lt;T&gt;, FileTimeExtensions, GenericSafeHandle, HGlobalMemoryMethods, InteropExtensions, IOExtensions, ListChangedEventArgs&lt;T&gt;, MarshalingStream, PinnedObject, ReflectionExtensions, SafeAllocatedMemoryHandle, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SafeMemoryHandle&lt;T&gt;, SafeMemoryHandleExt&lt;T&gt;, SparseArray&lt;T&gt;, StringHelper
 
 Structures
 EnumFlagIndexer&lt;T&gt;, StrPtrAnsi, StrPtrAuto, StrPtrUni
