--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -23,7 +23,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-IconLocation, PropertyType, PropertyTypeList, ShellFileInfo, ShellFileOperations
+ControlPanel, IconLocation, PropertyDescription, PropertyDescriptionList, PropertyStore, PropertyType, PropertyTypeList, ShellFileInfo, ShellFileNewOpEventArgs, ShellFileOperations, ShellFileOpEventArgs, ShellFolder, ShellImageList, ShellItem, ShellItemArray, ShellItemPropertyStore, ShellItemPropertyUpdates, ShellLibrary, ShellLibraryFolders, ShellLink, TaskbarList
 
 Enumerations
 ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryViewTemplate, LinkResolution, OperationFlags, ShellIconType, ShellItemAttribute, ShellItemComparison, ShellItemDisplayString, ShellItemGetImageOptions, ShellItemToolTipOptions, TransferFlags
