Fixed updates to project comments

--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-ImageList_DrawEx, ImageList_GetIcon, ImageList_SetOverlayImage, InitCommonControlsEx, PropertySheetA, PropertySheetW, SendMessageA, SendMessageW, TaskDialog, TaskDialogIndirect
+ImageList_DrawEx, ImageList_GetIcon, ImageList_SetOverlayImage, InitCommonControlsEx, PropertySheet, SendMessage, TaskDialog, TaskDialogIndirect
 
 Structures
 BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, EDITBALLOONTIP, HDHITTESTINFO, HDITEM, HDLAYOUT, HDTEXTFILTER, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, TBBUTTON, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB
