--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CredPackAuthenticationBufferA, CredPackAuthenticationBufferW, CredUICmdLinePromptForCredentialsA, CredUICmdLinePromptForCredentialsW, CredUIConfirmCredentialsA, CredUIConfirmCredentialsW, CredUIParseUserNameA, CredUIParseUserNameW, CredUIPromptForCredentialsA, CredUIPromptForCredentialsW, CredUIPromptForWindowsCredentialsA, CredUIPromptForWindowsCredentialsW, CredUIReadSSOCredA, CredUIReadSSOCredW, CredUIStoreSSOCredA, CredUIStoreSSOCredW, CredUnPackAuthenticationBufferA, CredUnPackAuthenticationBufferW, SspiGetCredUIContext, SspiIsPromptingNeeded, SspiPromptForCredentialsA, SspiPromptForCredentialsW, SspiUnmarshalCredUIContext, SspiUpdateCredentials, XCredUIStoreSSOCredA, XCredUIStoreSSOCredW
+CredPackAuthenticationBuffer, CredUICmdLinePromptForCredentials, CredUIConfirmCredentials, CredUIParseUserName, CredUIPromptForCredentials, CredUIPromptForWindowsCredentials, CredUIReadSSOCred, CredUIStoreSSOCred, CredUnPackAuthenticationBuffer, SspiGetCredUIContext, SspiIsPromptingNeeded, SspiPromptForCredentials, SspiUnmarshalCredUIContext, SspiUpdateCredentials, XCredUIStoreSSOCred
 
 Structures
 PSEC_WINNT_CREDUI_CONTEXT_VECTOR, PSEC_WINNT_CREDUI_CONTEXT, CREDUI_INFO
