Simplified use cases for SendMessage across all projects.

--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CredPackAuthenticationBuffer, CredUICmdLinePromptForCredentials, CredUIConfirmCredentials, CredUIParseUserName, CredUIPromptForCredentials, CredUIPromptForWindowsCredentials, CredUIReadSSOCred, CredUIStoreSSOCred, CredUnPackAuthenticationBuffer, SspiGetCredUIContext, SspiIsPromptingNeeded, SspiPromptForCredentials, SspiUnmarshalCredUIContext, SspiUpdateCredentials, XCredUIStoreSSOCred
+CredPackAuthenticationBuffer, CredUICmdLinePromptForCredentials, CredUIConfirmCredentials, CredUIParseUserName, CredUIPromptForCredentials, CredUIPromptForWindowsCredentials, CredUIReadSSOCred, CredUIStoreSSOCred, CredUnPackAuthenticationBuffer, SspiGetCredUIContext, SspiIsPromptingNeeded, SspiPromptForCredentials, SspiUnmarshalCredUIContext, SspiUpdateCredentials
 
 Structures
 PSEC_WINNT_CREDUI_CONTEXT_VECTOR, PSEC_WINNT_CREDUI_CONTEXT, CREDUI_INFO
