--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-SHCreateStreamOnFileEx
+PathFindOnPath, SHCreateStreamOnFileEx
 
 </PackageReleaseNotes>
   </PropertyGroup>
