--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -25,13 +25,13 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-ImageList_DrawEx, ImageList_GetIcon, ImageList_SetOverlayImage, InitCommonControlsEx, PropertySheet, SendMessage, TaskDialog, TaskDialogIndirect
+_TrackMouseEvent, CreateMappedBitmap, CreatePropertySheetPage, CreateUpDownControl, DefSubclassProc, DestroyPropertySheetPage, DPA_Clone, DPA_Create, DPA_CreateEx, DPA_DeleteAllPtrs, DPA_DeletePtr, DPA_Destroy, DPA_DestroyCallback, DPA_EnumCallback, DPA_GetPtr, DPA_GetPtrIndex, DPA_GetSize, DPA_Grow, DPA_InsertPtr, DPA_LoadStream, DPA_Merge, DPA_SaveStream, DPA_Search, DPA_SetPtr, DPA_Sort, DrawInsert, DrawShadowText, DrawStatusText, DSA_Clone, DSA_Create, DSA_DeleteAllItems, DSA_DeleteItem, DSA_Destroy, DSA_DestroyCallback, DSA_EnumCallback, DSA_GetItem, DSA_GetItemPtr, DSA_GetSize, DSA_InsertItem, DSA_SetItem, DSA_Sort, GetEffectiveClientRect, GetMUILanguage, GetWindowSubclass, HIMAGELIST_QueryInterface, ImageList_CoCreateInstance, ImageList_Create, ImageList_Destroy, ImageList_Duplicate, ImageList_GetIcon, ImageList_LoadImage, ImageList_Read, ImageList_ReadEx, ImageList_Write, ImageList_WriteEx, InitCommonControlsEx, InitMUILanguage, LBItemFromPt, LoadIconMetric, LoadIconWithScaleDown, MakeDragList, MenuHelp, PropertySheet, RemoveWindowSubclass, SendMessage, SetWindowSubclass, ShowHideMenuCtl, Str_SetPtrW, TaskDialog, TaskDialogIndirect
 
 Structures
-BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, EDITBALLOONTIP, HDHITTESTINFO, HDITEM, HDLAYOUT, HDTEXTFILTER, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, TBBUTTON, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB
+BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCHAR, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, NMCUSTOMTEXT, NMKEY, NMMOUSE, NMOBJECTNOTIFY, NMTOOLTIPSCREATED, EDITBALLOONTIP, HDTEXTFILTER, HDHITTESTINFO, HDITEM, HDLAYOUT, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTSTATS, ImageListDrawColor, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, COLORMAP, NMTBDISPINFO, NMTBGETINFOTIP, NMTBHOTITEM, NMTBRESTORE, NMTBSAVE, NMTOOLBAR, TBADDBITMAP, TBBUTTON, TBBUTTONINFO, TBINSERTMARK, TBMETRICS, TBREPLACEBITMAP, TBSAVEPARAMS, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB, NMUPDOWN, UDACCEL, DPASTREAMINFO
 
 Interfaces
-IImageList
+IImageList, IImageList2
 
 </PackageReleaseNotes>
   </PropertyGroup>
@@ -57,5 +57,6 @@ IImageList
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\User32.Gdi\Vanara.PInvoke.User32.Gdi.csproj" />
+    <ProjectReference Include="..\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
 </Project>
