--- a/PInvoke/User32/Vanara.PInvoke.User32.csproj
+++ b/PInvoke/User32/Vanara.PInvoke.User32.csproj
@@ -25,10 +25,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CallNextHookEx, ChildWindowFromPointEx, DestroyIcon, DrawEdge, DrawText, ExitWindowsEx, FindWindow, GetActiveWindow, GetClientRect, GetIconInfo, GetSysColor, GetSysColorBrush, GetWindowLong, GetWindowLongPtr, GetWindowRect, InvalidateRect, LoadImage, LoadString, LockWorkStation, MapWindowPoints, RealGetWindowClass, RegisterHotKey, RegisterWindowMessage, ScreenToClient, SendMessage, SetWindowPos, SetWindowsHookEx, SetWindowText, ShutdownBlockReasonCreate, ShutdownBlockReasonDestroy, ShutdownBlockReasonQuery, UnhookWindowsHookEx, UnregisterHotKey, WindowFromPoint
+CallNextHookEx, ChildWindowFromPointEx, DestroyIcon, DrawEdge, DrawText, ExitWindowsEx, FindWindow, GetActiveWindow, GetClientRect, GetIconInfo, GetSysColor, GetSysColorBrush, GetWindowLong, GetWindowLongPtr, GetWindowRect, InvalidateRect, LoadImage, LoadString, LockWorkStation, MapWindowPoints, RealGetWindowClass, RegisterHotKey, RegisterWindowMessage, ScreenToClient, SendMessage, SetWindowPos, SetWindowsHookEx, SetWindowText, ShutdownBlockReasonCreate, ShutdownBlockReasonDestroy, ShutdownBlockReasonQuery, TrackMouseEvent, UnhookWindowsHookEx, UnregisterHotKey, WindowFromPoint
 
 Structures
-ICONINFO, NMHDR, MINMAXINFO, WINDOWPOS, GRPICONDIR, GRPICONDIRENTRY
+TRACKMOUSEEVENT, ICONINFO, NMHDR, MINMAXINFO, WINDOWPOS, GRPICONDIR, GRPICONDIRENTRY
 
 </PackageReleaseNotes>
   </PropertyGroup>
