--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -4,7 +4,7 @@
     <Description>Classes for user interface related items derived from the Vanara PInvoke libraries. Includes extensions for almost all common controls to give post Vista capabilities, WinForms controls (panel, commandlink, enhanced combo boxes, IPAddress, split button, trackbar and themed controls), shutdown/restart/lock control, buffered painting, resource files, access control editor, simplifed designer framework for Windows.Forms.</Description>
     <Copyright>Copyright © 2017-2018</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.13</VersionPrefix>
+    <VersionPrefix>1.0.14</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.Windows.Forms</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -26,7 +26,7 @@ Classes
 AccessControlEditorDialog, ActivationContext, AppSettingsFileListStorage, AttributedComponentDesigner&lt;T&gt;, AttributedComponentDesignerEx&lt;T&gt;, AttributedControlDesigner&lt;T&gt;, AttributedControlDesignerEx&lt;T&gt;, AttributedDesignerActionList, AttributedParentControlDesigner&lt;T&gt;, AttributedParentControlDesignerEx&lt;T&gt;, AuthenticationBuffer, BufferedPaint, BufferedPaintHandle, ButtonClickedEventArgs, ButtonExtension, CollapsiblePanel, ComboBoxExtension, CommandLink, ComponentDesignerExtension, ControlExtension, ControlImage, CredentialsDialog, CursorExtension, CustomButton, CustomComboBox, CustomDrawBase, DesignerActionMethodAttribute, DesignerActionPropertyAttribute, DesignerVerbAttribute, DesktopWindowManager, DisabledItemComboBox, DrawPattern, EditorServiceContext, EnumComboBox, ExpandedEventArgs, FlagCheckedListBox, FlagCheckedListBoxItem, FlagEnumUIEditor&lt;T&gt;, FolderBrowserDialog, FolderBrowserDialogInitializedEventArgs, GenericProvider, GetDuration&lt;T&gt;, GlassExtenderProvider, GraphicsExtension, GroupIconResIndexer, IconExtension, ImageListExtension, ImageResIndexer&lt;T&gt;, InputDialog, InputDialogItemAttribute, InvalidFolderEventArgs, IPAddressBox, IPAddressFieldChangedEventArgs, LabelExtension, ListViewExtension, ListViewGroupingSet&lt;T&gt;, LiveThumbnail, MapPointExtension, MenuStripMRUManager, MRUManager, PaintAction&lt;T&gt;, PasswordValidatorEventArgs, PreventShutdownContext, ProgressDialog, ProgressEventArgs, RedirectedDesignerPropertyAttribute, RegistryFileListStorage, ResourceFile, ServiceProviderExtension, SmartBitmapLock, SplitButton, SplitMenuEventArgs, StringResIndexer, Style, TaskDialog, TaskDialogButton, TaskDialogButtonBase, TaskDialogButtonCollection&lt;T&gt;, TaskDialogProgressBar, TaskDialogRadioButton, TextBoxExtension, ThemedImageDraw, ThemedLabel, ThemedPanel, ThemedTableLayoutPanel, TimerEventArgs, TrackBarEx, TranslateButtonStateDelegate, TreeViewExtension, TypedBehavior&lt;T&gt;, TypedDesignerActionList&lt;T&gt;, TypedGlyph&lt;T&gt;, VerificationClickedEventArgs, VistaButtonBase, VistaControlExtender, VisualStylesRendererExtension, VisualTheme
 
 Structures
-ImageListDrawColor, TaskDialogResult
+TaskDialogResult
 
 Enumerations
 CloakingSource, CollapsiblePanelBorderCondition, CollapsiblePanelHeaderState, ControlState, Corners, Flip3DWindowPolicy, FolderBrowserDialogOptions, KnownFolder, NonClientRenderingPolicy, ProgressBarState, RenderStyle, SecurityPageType, SizeMode, TaskDialogButtonDisplay, TaskDialogCommonButtons, TaskDialogIcon
