--- a/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
+++ b/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from NTDSApi.dll.</Description>
     <Copyright>Copyright © 2017-2018</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.16</VersionPrefix>
+    <VersionPrefix>1.0.17</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.NTDSApi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-DsBind, DsBindWithCred, DsCrackNames, DsFreeNameResult, DsFreePasswordCredentials, DsMakePasswordCredentials, DsUnBind
+DsBindA, DsBindW, DsBindWithCredA, DsBindWithCredW, DsCrackNamesA, DsCrackNamesW, DsFreeNameResultA, DsFreeNameResultW, DsFreePasswordCredentials, DsMakePasswordCredentialsA, DsMakePasswordCredentialsW, DsUnBindA, DsUnBindW
 
 Structures
 DS_NAME_RESULT, DS_NAME_RESULT_ITEM
