--- a/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
+++ b/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from NetApi32.dll.</Description>
     <Copyright>Copyright © 2017-2018</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.16</VersionPrefix>
+    <VersionPrefix>1.0.17</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.NetApi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-DsGetDcName, NetApiBufferFree, NetServerEnum, NetServerGetInfo
+DsGetDcNameA, DsGetDcNameW, NetApiBufferFree, NetServerEnum, NetServerGetInfo
 
 Structures
 DOMAIN_CONTROLLER_INFO, SERVER_INFO_100, SERVER_INFO_101, SERVER_INFO_102
