--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from ShlwApi.dll.</Description>
     <Copyright>Copyright © 2017-2018</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.16</VersionPrefix>
+    <VersionPrefix>1.0.17</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.ShlwApi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-PathFindOnPath, SHCreateStreamOnFileEx
+PathFindOnPathA, PathFindOnPathW, SHCreateStreamOnFileEx
 
 </PackageReleaseNotes>
   </PropertyGroup>
